Content for kids (and menu item)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
             <a href="/" id="logo">YRS</a>
             <nav>
         	<a href="/about/">About</a>
+                <a href="/kids/">Kids</a>
         	<a href="/parents/">Parents</a>
           	<a href="/mentors/">Mentors</a>
           	<a href="/centres/">Centres</a>
