zap peoplefund.it link for now. New approach to crowd-donate coming soon, though

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
           	<a href="/centres/">Centres</a>
           	<a href="/sponsors/">Sponsors</a>
           	<a href="/2011/">2011</a>
-                <a href="http://www.peoplefund.it/young-rewired-state/">FundIt</a>
+                <!-- <a href="http://www.peoplefund.it/young-rewired-state/">FundIt</a> -->
           	<a href="/contact">Contact</a>
             </nav>
         </div>
