Ditch w3schools (see http://w3fools.com/), replacing with MDN docs.
Fix punctuation inconsistencies. Add in
http://teachyourselftocode.com/

--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -7,23 +7,33 @@
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2><a href="http://www.w3schools.com/html/default.asp">W3Schools HTML</a></h2>
-      <p>A simple guide to basic HTML from W3Schools.</p>
+      <h2><a href="https://developer.mozilla.org/en-US/learn">Mozilla Guides to HTML, CSS, and JavaScript</a></h2>
+      <p>Community edited, to provide a set of effective and comprehensive guides.</p>
+    </div><!-- closing grid3 -->
+
+    <div class="grid3">
+      <h2><a href="https://developer.mozilla.org/en-US/learn/html">Mozilla Guides to HTML</a></h2>
+      <p>Introductory and Advanced guides to learning HTML &#8212; tutorials and training materials.</p>
+    </div><!-- closing grid3 -->
+
+    <div class="grid3">
+      <h2><a href="https://developer.mozilla.org/en-US/learn/css">Mozilla Guides to CSS</a></h2>
+      <p>Introductory, Intermediate, and Advanced guides to learning CSS &#8212; tutorials and training materials.</p>
+    </div><!-- closing grid3 -->
+
+    <div class="grid3">
+      <h2><a href="https://developer.mozilla.org/en-US/learn/javascript">Mozilla Guides to JavaScript</a></h2>
+      <p>MDN articles about learning/improving JavaScript.</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
       <h2><a href="http://learn.shayhowe.com/html-css/terminology-syntax-intro/">Guide to HTML & CSS</a></h2>
-      <p>A great guide to HTML &amp; CSS, updated weekly .</p>
+      <p>A great guide to HTML &amp; CSS, updated weekly.</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
-      <h2><a href="http://www.w3schools.com/css/default.asp">W3Schools CSS</a></h2>
-      <p>A simple guide to basic CSS from W3Schools.</p>
-    </div><!-- closing grid3 -->
-
-    <div class="grid3">
-      <h2><a href="http://www.w3schools.com/js/default.asp">W3Schools Javascript</a></h2>
-      <p>A simple guide to basic Javascript from W3Schools.</p>
+      <h2><a href="http://teachyourselftocode.com/">Teach yourself to code</a></h2>
+      <p>The web is a fantastic stockpile of resources for people who want to learn programming but it can be hard to know where to start.</p>
     </div><!-- closing grid3 -->
 
     <div class="grid3">
@@ -68,7 +78,7 @@
 
     <div class="grid3">
       <h2><a href="http://www.alice.org/kelleher/storytelling/download.html">Story Telling Alice</a></h2>
-      <p>Designed to motivate a broad spectrum of middle school students (particularly girls) to learn to program computers through creating short 3D animated movies. <strong>Note:</strong> Story Telling Alice is not hugely tested, is only available for windows based machines, and has no support</p>
+      <p>Designed to motivate a broad spectrum of middle school students (particularly girls) to learn to program computers through creating short 3D animated movies. <strong>Note:</strong> Story Telling Alice is not hugely tested, is only available for windows based machines, and has no support.</p>
     </div><!-- closing grid3 -->
 
 	<div class="grid3">
@@ -78,32 +88,32 @@
 
 	<div class="grid3">
       <h2><a href="http://en.wikipedia.org/wiki/Lego_Mindstorms">Lego Mindstorm</a></h2>
-      <p>Programmable lego</p>
+      <p>Programmable lego.</p>
     </div><!-- closing grid3 -->
 
 	<div class="grid3">
       <h2><a href="http://kidsruby.com/">Kid's Ruby</a></h2>
-      <p>Simple, free, and fun</p>
+      <p>Simple, free, and fun.</p>
     </div><!-- closing grid3 -->
 
 	<div class="grid3">
       <h2><a href="http://learnpythonthehardway.org/">Learn Python The Hard Way</a></h2>
-      <p>Emphasizes precision, attention to detail, and persistence</p>
+      <p>Emphasizes precision, attention to detail, and persistence.</p>
     </div><!-- closing grid3 -->
 
 	<div class="grid3">
       <h2><a href="http://www.codeproject.com/KB/android/AndroidGuide.aspx">Code Project</a></h2>
-      <p>A great page on Android programming (for mobiles) there are many tutorials for Android</p>
+      <p>A great page on Android programming (for mobiles) there are many tutorials for Android.</p>
     </div><!-- closing grid3 -->
 
 	<div class="grid3">
       <h2><a href="http://www.blitzgamesstudios.com/blitz_academy/resources/">Blitz Academy</a></h2>
-      <p>A list of resources for those thinking about getting a job as a games developer</p>
+      <p>A list of resources for those thinking about getting a job as a games developer.</p>
     </div><!-- closing grid3 -->
 
 	<div class="grid3">
       <h2><a href="http://www.gamebooks.org/show_series.php?id=1171">Bytes Brothers</a></h2>
-      <p>A cross between Encyclopedia Brown and Micro Adventure, each volume in this series contains several short mysteries. The user must read carefully and run very simple BASIC computer programs in order to guess the solutions</p>
+      <p>A cross between Encyclopedia Brown and Micro Adventure, each volume in this series contains several short mysteries. The user must read carefully and run very simple BASIC computer programs in order to guess the solutions.</p>
     </div><!-- closing grid3 -->
 
 <!-- end resources inclusion -->
