First pass festival page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,16 @@
         <div class="container clearfix">
             <a href="/" id="logo">YRS</a>
             <nav>
-        	<a href="/about/">About</a>
-                <a href="/kids/">Kids</a>
-        	<a href="/parents/">Parents</a>
-          	<a href="/mentors/">Mentors</a>
-          	<a href="/centres/">Centres</a>
-          	<a href="/sponsors/">Sponsors</a>
-          	<a href="/2011/">2011</a>
+        	    <a href="/about/">About</a>
+              <a href="/festival/">Festival</a>
+              <a href="/kids/">Kids</a>
+        	    <a href="/parents/">Parents</a>
+          	  <a href="/mentors/">Mentors</a>
+          	  <a href="/centres/">Centres</a>
+          	  <a href="/sponsors/">Sponsors</a>
+          	  <a href="/2011/">2011</a>
                 <!-- <a href="http://www.peoplefund.it/young-rewired-state/">FundIt</a> -->
-          	<a href="/contact">Contact</a>
+          	  <a href="/contact">Contact</a>
             </nav>
         </div>
     </header>
