Final Festival page v4

--- a/_includes/footer.html.backup_20120705_001.html
+++ b/_includes/footer.html.backup_20120705_001.html
@@ -8,6 +8,6 @@
 
 
         <div class="container">
-            <h4>Young Rewired State on  <a href="http://twitter.com/youngrewired">Twitter</a>  •  <a href="http://www.facebook.com/youngrewiredstate2012">Facebook</a><span class="right">© Rewired State</span></h4>
+            <h4>Young Rewired State on  <a href="http://twitter.com/youngrewired">Twitter</a>  •  <a href="http://www.facebook.com/youngrewiredstate2012">Facebook</a>  •  This site is in beta, your <a href="mailto:yrsfeedback@rewiredstate.org">feedback</a> or <a href="https://github.com/adamamyl/jekylld-yrs2012">pull request</a> is appreciated<span class="right">© Rewired State</span></h4>
         </div><!-- closing container -->
     </footer>
