change tracking to GoSquared (a sponsor)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,18 +11,17 @@
 
   <meta name="description" content="">
   <meta name="author" content="Rewired State, Ltd.">
-  <script type="text/javascript">
-
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-25364597-1']);
-  _gaq.push(['_trackPageview']);
-
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-
+ <script type="text/javascript">
+  var GoSquared={};
+  GoSquared.acct = "GSN-083699-T";
+  (function(w){
+    function gs(){
+      w._gstc_lt=+(new Date); var d=document;
+      var g = d.createElement("script"); g.type = "text/javascript"; g.async = true; g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+      var s = d.getElementsByTagName("script")[0]; s.parentNode.insertBefore(g, s);
+    }
+    w.addEventListener?w.addEventListener("load",gs,false):w.attachEvent("onload",gs);
+  })(window);
 </script>
 
   <link rel="stylesheet" href="/css/site.css" />
