various misc changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
-    <title>{{ page.title }} &raquo; Young Rewired State &laquo;</title>
+      <title>SAP Young Rewired State 2012</title>
+<--    <title>{{ page.title }} &raquo; Young Rewired State &laquo;</title> -->
 
   <meta name="description" content="">
   <meta name="author" content="Rewired State, Ltd.">
