--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
     w.addEventListener?w.addEventListener("load",gs,false):w.attachEvent("onload",gs);
   })(window);
 </script>
+  <script src="/js/libs/jquery-1.6.2.min.js"></script>
+  <script src="/js/libs/jquery.ticker.min.js"></script>
 
   <link rel="stylesheet" href="/css/site.css" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
